[gd_scene load_steps=5 format=2]

[ext_resource path="res://Battlefield/Main.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Battlefield/Battlefield.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Battlefield" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Enemy" parent="." instance=ExtResource( 4 )]
[connection signal="attack" from="." to="Player" method="_on_Main_attack"]
[connection signal="attack" from="." to="Battlefield" method="_on_Main_attack"]
[connection signal="damage_done_to_enemy" from="." to="Enemy" method="_on_Main_damage_done_to_enemy"]
[connection signal="damage_done_to_player" from="." to="Player" method="_on_Main_damage_done_to_player"]
[connection signal="selected_card" from="." to="Battlefield" method="_on_Main_selected_card"]
[connection signal="used" from="." to="Player" method="_on_Main_used"]
[connection signal="damage_done_to_enemy" from="Battlefield" to="." method="_on_Battlefield_damage_done_to_enemy"]
[connection signal="damage_done_to_player" from="Battlefield" to="." method="_on_Battlefield_damage_done_to_player"]
[connection signal="pressed" from="Battlefield" to="." method="_on_Battlefield_pressed"]
[connection signal="next_pressed" from="Player" to="." method="_on_Player_next_pressed"]
[connection signal="selected" from="Player" to="." method="_on_Player_selected"]
